# libuvc-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: context.rs  controls.rs  device.rs  error.rs  formats.rs  frame.rs  streaming.rs
uvc-src/: Cargo.toml  build.rs
uvc-sys/: Cargo.toml  build.rs
uvc-sys/src/: lib.rs
