[package]
name = "norm-uvc"
description = "Safe wrapper around norma-core libuvc fork with extended timestamp support (Linux only)"
version = "0.3.0-nc"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>", "NormaCore.Dev"]
license = "MIT"
repository = "https://github.com/norma-core/libuvc-rs.git"
categories = ["api-bindings", "multimedia::video"]
keywords = ["webcam", "capture", "camera"]
readme = "README.md"
edition = "2024"

[dependencies]
norm-uvc-sys = { path = "uvc-sys", version = "0.3.0-nc" }

[features]
uvc_debugging = ["norm-uvc-sys/uvc_debugging"]

[workspace]
members = [
    "uvc-src",
    "uvc-sys",
]

[package.metadata.docs.rs]
no-default-features = true
