[package]
name = "norm-uvc-src"
version = "0.3.0-nc"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>", "NormaCore.Dev"]
edition = "2024"
license-file = "source/LICENSE.txt"
build = "build.rs"
repository = "https://github.com/norma-core/libuvc-rs"
description = "Vendored norma-core libuvc fork with CLOCK_BOOTTIME timestamps (Linux only)"
links = "uvcsrc"

[features]
jpeg = ["mozjpeg-sys"]
uvc_debugging = []

[dependencies]
mozjpeg-sys = { version = "2.2.1", default-features = false, optional = true }
libusb-sys = { version = "0.7.0", package = "libusb1-sys" }

[build-dependencies]
cc = "1.2.56"
