[package]
name = "norm-uvc-sys"
description = "Raw wrapper of libuvc"
version = "0.3.0-nc"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>", "NormaCore.Dev"]
links = "uvc"
build = "build.rs"
license = "MIT"
repository = "https://github.com/norma-core/libuvc-rs.git"
categories = ["external-ffi-bindings", "multimedia::video"]
edition = "2024"

[features]
uvc_debugging = ["norm-uvc-src/uvc_debugging"]

[dependencies]
norm-uvc-src = { path = "../uvc-src", version = "0.3.0-nc" }

[build-dependencies]
bindgen = "0.72.1"
